<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RecoverPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">


        <TextView
            android:id="@+id/recoveryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/title_passwordView"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/instructionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recoveryText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/text_recPassDesc" />

        <!-- Password TextInputLayout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/instructionText"
            android:layout_marginTop="16dp"
            android:textColorHint="#B9B8B8"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="#BEBEBE"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password TextInputLayout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTextInputLayout"
            android:layout_marginTop="16dp"
            android:textColorHint="#B9B8B8"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="#BEBEBE"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/recoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmPasswordTextInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/button_recoverPass" />

    </RelativeLayout>
</FrameLayout>